# dotachile

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  build.xml  dev-sync.sh  docker-compose.override.yml  docker-compose.yml  pom.xml  skills-lock.json
.claude/: gsd-file-manifest.json  settings.json
.claude/agents/: gsd-ai-researcher.md  gsd-debugger.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
.claude/hooks/: gsd-check-update-worker.js  gsd-check-update.js  gsd-context-monitor.js  gsd-phase-boundary.sh  gsd-prompt-guard.js  gsd-read-guard.js  gsd-session-state.sh  gsd-statusline.js  gsd-validate-commit.sh  gsd-workflow-guard.js
.claude/skills/: user-story
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: CONCERNS.md  (+6 more)
docker/: init-db.sql  post-boot-commands.asadmin
nbproject/: build-impl.xml  faces-config.NavData  genfiles.properties  project.properties  project.xml
tools/email-rag/: CLAUDE.md  README.md  THIRD_PARTY_NOTICES.md  parse_mbox.py  pyproject.toml  redact.py  redaction_rules.py  search.py
tools/email-rag/tests/: conftest.py  test_parse.py  test_redact.py  test_search.py
tools/email-rag/tests/fixtures/: synthetic.mbox
web/: GOOGLE ADSENSE  TODOLIST  acceso-no-autorizado.xhtml  index.xhtml  inhouse.xhtml  login-error.xhtml  login.xhtml  psu.xhtml  test.xhtml
(+580 files in other folders)
